[project]
name = "dominos-mcp"
version = "1.0.0"
description = "Domino's Pizza MCP server — order pizza via AI assistant"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pizzapi>=0.0.6",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dominos_mcp"]
